<resources>
    <string name="app_name">Pentecost-Church</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string-array name="array_server">
        <item>TestServer</item>
        <item>PenteCost Church</item>
        <item>UnKnown</item>
    </string-array>


    <string-array name="array_gender">
        <item>Male</item>
        <item>Female</item>
        <item>UnKnown</item>
    </string-array>

    <string-array name="array_role">
        <item>Admin</item>
        <item>Editor</item>
        <item>View</item>
    </string-array>


    <string-array name="array_marital_status">
        <item>Single</item>
        <item>Engaged</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
        <item>Separated</item>
        <item>Unknown</item>
    </string-array>

    <string-array name="arry_temp">
        <item>Single</item>
    </string-array>

    <string-array name="reccurType">
        <item>Days(s)</item>
        <item>Weeks(s)</item>
        <item>Months(s)</item>
        <item>Year(s)</item>
    </string-array>

    <string-array name="array_colors">
        <item>#b2cd92</item>
        <item>#698497</item>
        <item>#cb6962</item>
        <item>#d1ba39</item>
        <item>#a773b8</item>
        <item>#bdbdbd</item>
        <item>#558B2F</item>
        <item>#B71C1C</item>
        <item>#6A1B9A</item>
        <item>#00695C</item>
        <item>#b2cd92</item>
        <item>#424242</item>
    </string-array>

    <string-array name="array_status">
        <item>Attender</item>
        <item>Visitor</item>
        <item>Inactive</item>
        <item>Unknown</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="txt_fingerplace">Please press finger &#8230;</string>
    <string name="txt_fpbegin">Begin to Identify</string>
    <string name="txt_fpplace">Please press finger</string>
    <string name="txt_fplift">Please lift finger</string>
    <string name="txt_fpdisplay">Display fingerprint image &#8230;</string>
    <string name="txt_fpprocess">Start processing &#8230;</string>
    <string name="txt_fpidentify">Being Identify &#8230;</string>
    <string name="txt_fpfail">Failed to generate!</string>
    <string name="txt_fpmatchok">Match OK!</string>
    <string name="txt_fpmatchfail">Match Fail!</string>
    <string name="txt_fpenrolok">Enrol OK</string>
    <string name="txt_fpenrolfail">Enrol Fail</string>
    <string name="txt_fpduplicate">Fail,Duplicate Enroll!</string>
    <string name="txt_cardmatch">Card Match Success</string>
    <string name="txt_cardsn">Card SN:</string>
    <string name="txt_fpmatching">Matching &#8230;</string>
    <string name="txt_snerror">SN Error</string>
    <string name="txt_fpclick">Click the fingerprint icon to begin</string>
    <string name="txt_enrolinfo1">Not Enroll User</string>
    <string name="txt_enrolinfo2">Please Enroll User</string>
    <string name="txt_exitinfo">Press again to exit</string>

    <string name="action_sign">Begin</string>
    <string name="action_screen">Clear</string>
    <string name="action_view">Record</string>


</resources>
