<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:iconTint="@color/white"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"

        app:showAsAction="always|withText" />

    <item
        android:iconTint="@color/white"
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        app:showAsAction="always|withText" />

    <item
        android:iconTint="@color/white"
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="always|withText" />
    <item

        android:id="@+id/navigation_notifications2"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="always|withText" />

 </menu>
