<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginTop="40dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<!--
android:background="@drawable/side_nav_bar"
android:layout_height="@dimen/nav_header_height"
-->

  <!--  <ImageView
        android:id="@+id/img_admin_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/default_icon" />-->
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@color/white"
        app:border_color="@android:color/white"
        android:contentDescription="@string/nav_header_desc"
        app:border_width="2dp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_admin_photo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_church"
        app:border_color="@android:color/white"
        app:border_width="2dp" />
</RelativeLayout>



    <TextView
        android:id="@+id/txt_adminName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txt_adminEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle" />


</LinearLayout>
